--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -7,7 +7,14 @@
     update_cache: true
 
 - name: Configure Vim
-  template: 
+  template:
     src: .vimrc.j2
     dest: ~/.vimrc
     mode: 0640
+
+- name: Install linter
+  become: true
+  apt:
+    name: "{{ linter_packages }}"
+    state: present
+    update_cache: true
