--- a/roles/tools/tasks/main.yml
+++ b/roles/tools/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Setting sources.list
+  become: true
+  template:
+    src: etc/apt/sources.list.j2
+    dest: /etc/apt/sources.list
+    mode: 0644
+
 - name: Install packages
   become: true
   apt:
