Setting .gitconfig file

--- a/roles/tools/tasks/main.yml
+++ b/roles/tools/tasks/main.yml
@@ -33,3 +33,9 @@
     state: present
     update_cache: true
     default_release: unstable
+
+- name: Configure Git globally
+  template:
+    src: .gitconfig.j2
+    dest: ~/.gitconfig
+    mode: 0640
