--- a/roles/tools/tasks/main.yml
+++ b/roles/tools/tasks/main.yml
@@ -34,6 +34,18 @@
     update_cache: true
     default_release: unstable
 
+- name: Ensure .ssh directory exists
+  file:
+    path: ~/.ssh
+    state: directory
+    mode: 0700
+
+- name: Setting SSH options
+  template:
+    src: .ssh/config.j2
+    dest: ~/.ssh/config
+    mode: 0600
+
 - name: Configure Git globally
   template:
     src: .gitconfig.j2
