--- a/roles/bash/tasks/main.yml
+++ b/roles/bash/tasks/main.yml
@@ -8,21 +8,29 @@
     owner: root
     group: staff
     mode: 0755
+  tags:
+    - bash
 
 - name: Update .bashrc file
   template:
     src: .bashrc.j2
     dest: ~/.bashrc
     mode: 0640
+  tags:
+    - bash
 
 - name: Ensure .config directory exists
   file:
     path: ~/.config
     state: directory
     mode: 0750
+  tags:
+    - bash
 
 - name: Set Starship configuration
   template:
     src: .config/starship.toml.j2
     dest: ~/.config/starship.toml
     mode: 0640
+  tags:
+    - bash
