--- a/roles/tools/defaults/main.yml
+++ b/roles/tools/defaults/main.yml
@@ -20,6 +20,7 @@ default_packages:
   - locate
   - lsb-release
   - mtr
+  - ncdu
   - nmap
   - pwgen
   - strace
@@ -27,6 +28,7 @@ default_packages:
   - tcpdump
   - telnet
   - terminator
+  - traceroute
   - tig
   - tree
   - wget
